tests/incremental_delete_add_dependent/incremental_delete_add_dependent.exp
Error ------------------------------------------------------------------------------------------------------- baz.js:2:9

Cannot resolve module `Foo`. [cannot-resolve-module]

   2| require("Foo");
              ^^^^^



Found 1 error
No errors!
